--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,4 +1,4 @@
 frequency_divider_tb:
-	ghdl -a frequency_divider.vhd frequency_divider_tb.vhd
+	ghdl -a frequency_divider_1k.vhd frequency_divider_tb.vhd
 	ghdl -e frequency_divider_tb
 	ghdl -r frequency_divider_tb --wave=wave.ghw
